# docs/swagger.yaml
@@ -187,5 +187,39 @@ paths:
       summary: Get brigade by ID
       tags:
       - brigades
+  /brigades/{id}/archive:
+    patch:
+      description: Marks a brigade as archived.
+      parameters:
+      - description: Brigade ID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/gorouter.ErrorResponse'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/gorouter.ErrorResponse'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/gorouter.ErrorResponse'
+          description: Internal Server Error
+      summary: Archive brigade
+      tags:
+      - brigades
 servers:
 - url: /api/brigade-service
